Prevent text in store gallery from wrapping in weird ways

--- a/src/styles/components/_store-item.scss
+++ b/src/styles/components/_store-item.scss
@@ -1,5 +1,8 @@
 .store-item {
+  display: block;
+
   p {
     text-align: center;
+    clear: both;
   }
 }
